--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -19,8 +18,8 @@
 
 	<body style="width:1000px;margin:0 auto;">
 		<a href="#title" style="position:fixed;bottom:10px;margin-left:1020px;">Back to top</a>
-		<div style="text-align:center;line-height:100px;width:100%;font-size:58px;" id="title">2018 Hong Kong Election</div>
-		<div style="text-align:left;line-height:25px;width:100%;margin:10px 0;">The election... </div>
+		<div style="text-align:center;line-height:100px;width:100%;font-size:58px;" id="title">Sentiment Analytics of Oscars</div>
+		<div style="text-align:left;line-height:25px;width:100%;margin:10px 0;">The 90th Oscars (the 90th Academy Awards ceremony) was held on last Sunday, 4th March. For each year, Oscars always draws much public attentions and raises a series of controversies due to its great influence in film industry. Last year, Oscars finally got rid of the label "Oscars is too white", but for this year it comes to the issue "Women must occupy half the sky". By searching tweets related to the hashtag #Oscars, it could give an overview of the public reflection to Oscars and what relevant issues do people concern. </div>
 
 		<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
 		<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/world.js"></script>
@@ -34,9 +33,9 @@
 
 			<!-- Nav tabs -->
 			<ul class="nav nav-tabs" role="tablist">
-				<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">1</a></li>
-				<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">2</a></li>
-				<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">3</a></li>
+				<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Top10 Mentioned and Relevant Hashtags</a></li>
+				<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">SentimentScore & #Metoo Campaign</a></li>
+				<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Conclusion</a></li>
 			</ul>
 
 			<!-- Tab panes -->
@@ -45,8 +44,9 @@
 					<div style="text-align:left;line-height:50px;width:100%;font-size:36px;">Top10 Mentioned and Relevant Hashtags</div>
 
 					<div style="text-align:center;line-height:50px;width:100%;margin:10px 0;font-size:24px;">Oscars--Top10 Mentioned ID & Relevant Hashtag</div>
-          <script id="infogram_0_83f8ecf2-2d6e-4d66-b3ca-0fd75e4daa76" title="" src="https://e.infogram.com/js/dist/embed.js?r1R" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogram.com" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Infogram</a></div>
-
+          <p style="text-align: center; "><img src="./Rplot-election results.png" style="width: 100%; " /></p>
+          <div style="text-align:center;line-height:25px;width:100%;margin:10px 0;">图9:各国奖牌数与总得分可能性关系</div>
+          
 					<div style="text-align:center;line-height:50px;width:100%;margin:10px 0;font-size:24px;">GoldenGlobes--Top10 Mentioned ID & Relevant Hashtag</div>
 					<script id="infogram_0_7dd9f972-7a64-4671-b86b-088ed703d513" title="" src="https://e.infogram.com/js/dist/embed.js?X7y" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogram.com" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Infogram</a></div>
 
