--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body style="width:1000px;margin:0 auto;">
 		<a href="#title" style="position:fixed;bottom:10px;margin-left:1020px;">Back to top</a>
 		<div style="text-align:center;line-height:100px;width:100%;font-size:58px;" id="title">Pan-democrat VS Pro-establishment in HK By-election</div>
-		<div style="text-align:left;line-height:25px;width:100%;margin:10px 0;">On March 11, 2018 by-elections of Hong Kong Legislative Council was held. Considering the results of three geographical constituencies including Hong Kong Island, Kowloon West and New Territories East, it seems that for this year the competition between two main political fictions of pan-democrat and pro-establishment is intense and it could be a close election than ever.
+		<div style="text-align:left;line-height:50px;width:100%;font-size:22px;">On March 11, 2018 by-elections of Hong Kong Legislative Council was held. Considering the results of three geographical constituencies including Hong Kong Island, Kowloon West and New Territories East, it seems that for this year the competition between two main political fictions of pan-democrat and pro-establishment is intense and it could be a close election than ever.
  </div>
 
 		<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
@@ -35,17 +35,12 @@
 			<!-- Nav tabs -->
 			<ul class="nav nav-tabs" role="tablist">
 				<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Winner of each election station</a></li>
-				<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">*Remarks</a></li>
-				<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Conclusion</a></li>
-			</ul>
+				</ul>
 
 			<!-- Tab panes -->
 			<div class="tab-content">
 				<div role="tabpanel" class="tab-pane active" id="home" style="padding-bottom: 15px;border-bottom: 2px solid gray;">
-					<div style="text-align:left;line-height:50px;width:100%;font-size:36px;">xxx</div>
-
-					<div style="text-align:center;line-height:50px;width:100%;margin:10px 0;font-size:24px;">xxx</div>
-					<div style="text-align:center;line-height:25px;width:100%;margin:0px 0;">Results of each election station</div>
+					<div style="text-align:center;line-height:50px;width:100%;margin:10px 0;font-size:24px;">Results of each election station</div>
           <p style="text-align: center; "><img src="./Rplot-election results-01.png" style="width: 100%; " /></p>
 					<div style="text-align:center;line-height:25px;width:100%;margin:0px 0;">The Number of Stations Each Winner Won in Each Region</div>
 
@@ -112,34 +107,16 @@
 					// 使用刚指定的配置项和数据显示图表。
 					myChart.setOption(option);
 					</script>
-					<div style="text-align:center;line-height:50px;width:100%;margin:10px 0;font-size:24px;">xxx</div>
 
-					<div style="text-align:left;line-height:50px;width:100%;font-size:22px;">xxx</div>
-					<div style="text-align:left;line-height:25px;width:100%;margin:10px 0;"> After indicating the winning candidate of each voting station located on the map, seen two colors in all constituencies, it is clear that in each geographical constituency stations are divided up by two political fictions. Especially in Kowloon West, within the collected data shown on the map, Candidate Vincent from pro-establishment was elected with winning in 39 voting stations while pan-democrat candidate Yiu won for 33 stations, which was quite close to each other. This also indicates the highlight of this election that the pan-democrat is losing the monopoly and is less predominant than before.
+					<div style="text-align:left;line-height:50px;width:100%;font-size:36px;">Close Competition -- pan-democrat is losing the monopoly</div>
+					<div style="text-align:left;line-height:50px;width:100%;font-size:22px;"> After indicating the winning candidate of each voting station located on the map, seen two colors in all constituencies, it is clear that in each geographical constituency stations are divided up by two political fictions. Especially in Kowloon West, within the collected data shown on the map, Candidate Vincent from pro-establishment was elected with winning in 39 voting stations while pan-democrat candidate Yiu won for 33 stations, which was quite close to each other. This also indicates the highlight of this election that the pan-democrat is losing the monopoly and is less predominant than before.
 
 </div>
 
-					<div style="text-align:left;line-height:50px;width:100%;font-size:22px;">xxx</div>
-					<div style="text-align:left;line-height:25px;width:100%;margin:10px 0;">Explain</div>
 
 				</div>
-				<div role="tabpanel" class="tab-pane" id="profile" style="padding-bottom: 15px;border-bottom: 2px solid gray;">
-					<div style="text-align:left;line-height:50px;width:100%;font-size:36px;">*Remarks</div>
-
-					<div style="text-align:center;line-height:50px;width:100%;margin:10px 0;font-size:24px;">How I did... </div>
-					<div style="text-align:left;line-height:25px;width:100%;margin:10px 0;">Explain... </div>
-
-					<div style="text-align:left;line-height:25px;width:100%;margin:10px 0;">Explain... </div>
 
 
-
-				</div>
-				<div role="tabpanel" class="tab-pane" id="messages" style="padding-bottom: 15px;border-bottom: 2px solid gray;">
-					<div style="text-align:left;line-height:50px;width:100%;font-size:36px;">Conclusion</div>
-
-					<div style="text-align:left;line-height:25px;width:100%;margin:10px 0;">Explain.... </div>
-
-									</div>
 								</div>
 
 							</div>
