--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					myChart.setOption(option);
 					</script>
 
-					<div style="text-align:left;line-height:50px;width:100%;font-size:36px;">Close Competition -- pan-democrat is losing the monopoly</div>
+					<div style="text-align:left;line-height:50px;width:100%;font-size:24px;">- Close Competition -- pan-democrat is losing the monopoly</div>
 					<div style="text-align:left;line-height:50px;width:100%;font-size:22px;"> After indicating the winning candidate of each voting station located on the map, seen two colors in all constituencies, it is clear that in each geographical constituency stations are divided up by two political fictions. Especially in Kowloon West, within the collected data shown on the map, Candidate Vincent from pro-establishment was elected with winning in 39 voting stations while pan-democrat candidate Yiu won for 33 stations, which was quite close to each other. This also indicates the highlight of this election that the pan-democrat is losing the monopoly and is less predominant than before.
 
 </div>
